# moe-router-demo

./: .gitignore  LICENSE
backend/: .env  README_backend.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  decision_rules.py  router_engine.py
backend/app/metrics/: __init__.py  metrics_service.py  storage.py
backend/app/models/: __init__.py  schemas.py
backend/app/providers/: __init__.py  base_client.py  gemini_flash_image_client.py  gemini_pro_client.py  openai_client.py
backend/db/: moe_router.sqlite
backend/moe_router_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: 00_overview_moe_router.md  01_context_backend.md  02_context_frontend.md  03_estructura_general.md
frontend/: README_frontend.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: MetricsTable.tsx  QueryForm.tsx  RouterDecisionCard.tsx
frontend/src/services/: apiClient.ts
frontend/src/types/: router.ts
