[project]
name = 'moe-router-backend'
version = '0.1.0'
description = 'FastAPI backend for the MOE router demo'
requires-python = '>=3.12'
readme = 'README_backend.md'
dependencies = [
    'fastapi>=0.111.0',
    'uvicorn[standard]>=0.30.0',
    'pydantic>=2.8.0',
    'pydantic-settings>=2.2.1',
    'httpx>=0.27.0',
    'sqlalchemy>=2.0.32',
    'aiosqlite>=0.20.0'
]

[project.optional-dependencies]
dev = [
    'pytest>=8.3.2',
    'ruff>=0.5.5'
]

[build-system]
requires = ['setuptools>=68.0']
build-backend = 'setuptools.build_meta'
